update to littlekt 0.11.0, JDK to 22, and gradle to 8.11.1